--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -87,7 +87,7 @@
   gap: 25px;  
 
   @media (max-width: 768px) {
-    justify-content: space-between;
+    justify-content: center;
     align-items: start;
     gap: 0px
   }
@@ -197,7 +197,7 @@
   padding-right: 25px;
   @media (max-width: 1280px) {
     width: 100%;
-    padding-right: 0px;
+    padding: 0 10px;
   }
 }
 
@@ -211,6 +211,9 @@
   font-size: 1.5rem;
   font-weight: 600;
   padding-bottom: 25px;
+  @media (max-width: 1280px) {
+    padding: 0 10px;
+  }
 }
 
 .filter-categories__options{
@@ -325,8 +328,9 @@
       width: calc(45% - 10px); 
       padding: 5px;
       justify-content: start ;
-      width: 320px;
-  }
+      height: 320px;
+      border: 0.1px solid #d3d3d3!important;
+    }
 
   &:hover{
       transform: scale(1.05);
@@ -346,7 +350,7 @@
 
 .product-image{
   padding: 15px;
-  width: 100%;
+  width: 100%; 
   height: auto;
   display: flex;
   justify-content: center;
@@ -362,6 +366,9 @@
   flex-direction: column;
   padding: 0 30px;
   padding-bottom: 15px;
+  @media (max-width: 768px) {
+      padding: 0;
+  }
 }
 
 .product-name{
