--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -328,10 +328,14 @@
       width: calc(45% - 10px); 
       padding: 20px!important;
       justify-content: start ;
-      height: 280px;
+      height: 100%;
       border: 0.1px solid #d3d3d3!important;
       border-radius: 0px;
     }
+  
+  @media (max-width:520px){
+    height: 520px;
+  }
 
   &:hover{
       transform: scale(1.05);
