--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -212,7 +212,7 @@
   font-weight: 600;
   padding-bottom: 25px;
   @media (max-width: 1280px) {
-    padding: 0 10px;
+    padding: 10px;
   }
 }
 
@@ -331,10 +331,15 @@
       height: 100%;
       border: 0.1px solid #d3d3d3!important;
       border-radius: 0px;
+      flex-grow: 1;
     }
   
   @media (max-width:520px){
-    height: 520px;
+    height: 320px;
+  }
+
+  @media (max-width: 400px) {
+    height: 280px;
   }
 
   &:hover{
