:sparkles: Create link buttons

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1033,3 +1033,20 @@
   }
 }
 
+.button_banner__secondary{
+  background-color: #FF7E00;
+  color: black;
+  font-size:1.8rem;
+  position: absolute;
+  top: 75%;
+  left: 35%;
+  width: 300px!important;
+
+  @media (max-width: 758px) {
+    top: 70%;
+    left: 28%;
+    width: 200px!important;
+    font-size: 1.3rem;
+
+  }
+}
