--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -153,7 +153,7 @@
   text-align: center;
   width: 60%;
   // width: 100%;
-  z-index: 1000;
+  z-index: 997;
   @media (max-width: 1280px) {
     margin-top: 1rem;
     width: 100%;
@@ -1036,11 +1036,15 @@
 .button_banner__secondary{
   background-color: #FF7E00;
   color: black;
-  font-size:1.8rem;
   position: absolute;
   top: 75%;
   left: 35%;
   width: 300px!important;
+  padding: 10px 20px;
+  font-size: 1.5rem;
+  font-weight: 600;
+  text-decoration: none;
+  text-align: center;
 
   @media (max-width: 758px) {
     top: 70%;
