--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -152,6 +152,7 @@
   text-decoration: none;
   text-align: center;
   width: 60%;
+  border-radius: 25px;
   // width: 100%;
   z-index: 997;
   @media (max-width: 1280px) {
@@ -1034,7 +1035,7 @@
 }
 
 .button_banner__secondary{
-  background-color: #FF7E00;
+  background-color: rgba(#ff7e00,0.5);
   color: black;
   position: absolute;
   top: 75%;
@@ -1045,12 +1046,23 @@
   font-weight: 700;
   text-decoration: none;
   text-align: center;
+  border-radius: 25px;
+
 
   @media (max-width: 758px) {
+    background-color: rgba(#ff7e00,0.5);
     top: 70%;
-    left: 28%;
-    width: 200px!important;
-    font-size: 1.3rem;
+    left: 22%;
+    width: 250px!important;
+    font-size: 1.6rem;
 
   }
+
+  :active{
+    background-color: rgba(#ff7e00,1);
+    color: black;
+    font-style: italic;
+    transition: 0.3s;
+  }
+
 }
