--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1035,6 +1035,7 @@
 }
 
 .button_banner__secondary{
+  font-family: 'Helvetica Neue', sans-serif;
   background-color: rgba(#ff7e00,0.5);
   color: black;
   position: absolute;
@@ -1050,7 +1051,7 @@
 
 
   @media (max-width: 758px) {
-    background-color: rgba(#ff7e00,0.5);
+    background-color: #ff7e00;
     top: 70%;
     left: 22%;
     width: 250px!important;
@@ -1058,11 +1059,5 @@
 
   }
 
-  :active{
-    background-color: rgba(#ff7e00,1);
-    color: black;
-    font-style: italic;
-    transition: 0.3s;
-  }
 
 }
