--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1048,7 +1048,7 @@
   text-decoration: none;
   text-align: center;
   border-radius: 25px;
-
+  letter-spacing: 0.2em;
 
   @media (max-width: 758px) {
     background-color: #ff7e00;
