--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1036,11 +1036,11 @@
 
 .button_banner__secondary{
   font-family: 'Helvetica Neue', sans-serif;
-  background-color: rgba(#ff7e00,0.5);
+  background-color: rgba(#ff7e00,1);
   color: black;
   position: absolute;
   top: 75%;
-  left: 35%;
+  left: 25%;
   width: 300px!important;
   padding: 10px 20px;
   font-size: 1.8rem;
@@ -1048,14 +1048,32 @@
   text-decoration: none;
   text-align: center;
   border-radius: 25px;
-  letter-spacing: 0.2em;
+
+  .home-title--bold{
+    font-size: 1rem;
+  }
+
+  &:hover{
+    color: black;
+    font-style: italic;
+    transition: 0.3s;
+  }
+
+  @media (max-width: 1280px) {
+    background-color: #ff7e00;
+    top: 65%;
+    left: 20%;
+    width: 250px!important;
+    font-size: 1.4rem;
+
+  }
 
   @media (max-width: 758px) {
     background-color: #ff7e00;
     top: 70%;
     left: 22%;
     width: 250px!important;
-    font-size: 1.6rem;
+    font-size: 1.2rem;
 
   }
 
