:sparkles: Update banner

--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -437,3 +437,12 @@
   }
 
 }
+
+.shop_banner{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #C5312D;
+  margin-bottom: 50px;
+}
