--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -441,8 +441,19 @@
 .shop_banner{
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
-  background-color: #C5312D;
+  background-color: transparent;
   margin-bottom: 50px;
+
+  > img{
+    border-radius: 50px;
+  }
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+  }
 }
