--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -445,6 +445,7 @@
   align-items: center;
   background-color: transparent;
   margin-bottom: 50px;
+  gap:20px;
 
   @media (max-width: 768px) {
     flex-direction: column;
@@ -455,8 +456,12 @@
 }
 
 .shop_banner{
+  width: 100%;
   > img{
     border-radius: 50px;
+
+    @media (max-width: 768px) {
+    }
   }
 }
 
