Add filter CTA button and update shop styles

--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -473,3 +473,11 @@
     display: none;
   }
 }
+
+.filter__CTA{
+  font-size: 1.2rem;
+  color: white;
+  background-color: black;
+  border-radius: 25px;
+  padding: 10px 20px;
+}
