--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -334,7 +334,7 @@
       height: 100%;
       border: 0.1px solid #d3d3d3!important;
       border-radius: 0px;
-      flex-grow: 1;
+      // flex-grow: 1;
     }
   
   @media (max-width:520px){
@@ -483,6 +483,21 @@
   color: white;
   background-color: black;
   border-radius: 25px;
-  padding: 10px 20px;
+  padding: 15px 25px;
   text-decoration: none;
+  text-align: center;
+  letter-spacing: 0.2px;
+  border: 1px solid transparent;
+
+  &:hover{
+    color: black;
+    background-color: white;
+    border: 1px solid black;
+  }
+
+  &:active{
+    color: black;
+    border: 1px solid black;
+    background-color: white;
+  }
 }
