Updated padding, text alignment, and border for button. Fixed a typo in filter CTA. Removed unnecessary files.

--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -334,7 +334,7 @@
       height: 100%;
       border: 0.1px solid #d3d3d3!important;
       border-radius: 0px;
-      flex-grow: 1;
+      // flex-grow: 1;
     }
   
   @media (max-width:520px){
