--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -511,36 +511,18 @@
   font-weight: 800;
   color:black;
   text-align: center;
-  width: 30%;
-  letter-spacing: -2px;
-  margin:auto;
+  letter-spacing: 0.2px;
+  border: 1px solid transparent;
 
-  @media (max-width: 1600px) {
-    font-size: 2rem;
+  &:hover{
+    color: black;
+    background-color: white;
+    border: 1px solid black;
   }
 
-  @media (max-width: 1200px) {
-    font-size: 1.7rem;
-    line-height: 1.7;
-    width: 75%;
+  &:active{
+    color: black;
+    border: 1px solid black;
+    background-color: white;
   }
-
-  @media (max-width: 768px) {
-    font-size: 2.3rem;
-    padding-top: 30px;
-    width: 85%;
-  }
-
-  @media (max-width: 500px) {
-    font-size: 1.2rem;
-    padding-top: 0px;
-    width: 85%;
-  }
-}
-
-.main-shop__feature{
-  color: #ff7e00;
-  background-color: white;
-  padding: 5px 15px;
-  border-radius: 20px;
 }
