--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -483,7 +483,7 @@
 
 .filter__CTA{
   font-weight: 600;
-  font-size: 1.2rem;
+  font-size: 1rem;
   color: white;
   background-color: black;
   border-radius: 25px;
@@ -497,11 +497,21 @@
     color: black;
     background-color: white;
     border: 1px solid black;
+    -webkit-transition: background-color 300ms linear;
+    -ms-transition: background-color 300ms linear;
+    transition: background-color 300ms linear;
   }
 
   &:active{
     color: black;
     border: 1px solid black;
     background-color: white;
+    -webkit-transition: background-color 300ms linear;
+    -ms-transition: background-color 300ms linear;
+    transition: background-color 300ms linear;
+  }
+
+  @media (max-width: 768px) {
+    font-size: 1.2rem;
   }
 }
