--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -477,14 +477,15 @@
 .main-shop__banner{ 
   width: 100%;
   height: auto;
-  object-fit: cover;
+  background: url(../assets/BANNER_WEB_COMPRAS.jpg) no-repeat center;
 
-  > img{
-    @media (max-width: 768px) {
-      width: 100%;
-    }
+  @media (max-width: 768px) {
+    background: url(../assets/BANNER_MOV_COMPRAS.jpg) no-repeat center;
+    background-size: cover;
   }
 }
+
+
 
 .main-shop__title{
   position: absolute;
