--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -477,11 +477,21 @@
 .main-shop__banner{ 
   width: 100%;
   height: auto;
-  background: url(../assets/BANNER_WEB_COMPRAS.jpg) no-repeat center;
+  background: url(../assets/BANNER_WEB_COMPRAS.jpg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 0;
+  padding-top: 11.69%; /* (img-height / img-width * container-width) */
+              /* (853 / 1280 * 100) */
 
   @media (max-width: 768px) {
-    background: url(../assets/BANNER_MOV_COMPRAS.jpg) no-repeat center;
-    background-size: cover;
+    background: url(../assets/BANNER_MOV_COMPRAS.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 0;
+    padding-top: 150%;
   }
 }
 
