--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -475,38 +475,41 @@
 }
 
 .main-shop__banner{ 
-  width: 100%;
-  height: auto;
   background: url(../assets/BANNER_WEB_COMPRAS.jpg);
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
-  height: 0;
-  padding-top: 11.69%; /* (img-height / img-width * container-width) */
-              /* (853 / 1280 * 100) */
-
+  height: 250px;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
   @media (max-width: 768px) {
     background: url(../assets/BANNER_MOV_COMPRAS.jpg);
     background-size: contain;
     background-repeat: no-repeat;
     width: 100%;
     height: 0;
-    padding-top: 150%;
+    align-items: start;
   }
 }
 
 
 
 .main-shop__title{
-  position: absolute;
-  font-size: 1.5rem;
-  font-weight: 700;
+  font-size: 2.4rem;
+  font-weight: 900;
   color:black;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
   text-align: center;
+  width: 30%;
+  letter-spacing: -2px;
+  margin:auto;
+
+  @media (max-width: 768px) {
+    font-size: 1.5rem;
+    padding-top: 30px;
+  }
 }
 
 .main-shop__feature{
