:lipstick: Update shop

--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -486,11 +486,8 @@
   justify-content: center;
   
   @media (max-width: 768px) {
-    background: url(../assets/BANNER_MOV_COMPRAS.jpg);
-    background-size: contain;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 0;
+    // background: url(../assets/BANNER_MOV_COMPRAS.jpg);
+    height: 300px;
     align-items: start;
   }
 }
@@ -506,6 +503,15 @@
   letter-spacing: -2px;
   margin:auto;
 
+  @media (max-width: 1600px) {
+    font-size: 2rem;
+  }
+
+  @media (max-width: 1200) {
+    font-size: 1.7rem;
+    line-height: 1.7;
+  }
+
   @media (max-width: 768px) {
     font-size: 1.5rem;
     padding-top: 30px;
@@ -514,4 +520,7 @@
 
 .main-shop__feature{
   color: #ff7e00;
+  background-color: white;
+  padding: 5px 15px;
+  border-radius: 20px;
 }
