--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -484,11 +484,17 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
+  @media (max-width: 1250px) {
+    width: 75%;
+    line-height: 1.6;
+  }
   
   @media (max-width: 768px) {
     // background: url(../assets/BANNER_MOV_COMPRAS.jpg);
     height: 300px;
-    align-items: start;
+    width: 85%;
+    line-height: 1.6;
   }
 }
 
