--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -491,6 +491,10 @@
     width: 100%;
     line-height: 1.6;
   }
+
+  @media (max-width: 500px){
+    height: 150px;
+  }
 }
 
 
@@ -521,7 +525,7 @@
   }
 
   @media (max-width: 500px) {
-    font-size: 1.8rem;
+    font-size: 1.2  rem;
     padding-top: 0px;
     width: 85%;
   }
