--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -187,7 +187,7 @@
     flex-direction: column;
     gap:10px;
     width: 100%;
-    padding: 0px;
+    padding: 0 20px;
     padding-top: 30px;
   }
 }
@@ -195,9 +195,6 @@
 .filter{
   width: 15%;
   padding-right: 25px;
-  display: flex;
-  flex-direction: column;
-  gap:20px;
   @media (max-width: 1280px) {
     width: 100%;
     padding: 0 10px;
@@ -329,12 +326,12 @@
 
   @media (max-width: 768px) {
       width: calc(45% - 10px); 
-      padding: 0px!important;
+      padding: 20px!important;
       justify-content: start ;
       height: 100%;
       border: 0.1px solid #d3d3d3!important;
       border-radius: 0px;
-      // flex-grow: 1;
+      flex-grow: 1;
     }
   
   @media (max-width:520px){
@@ -390,7 +387,6 @@
   margin-bottom: 10px;
 
   @media (max-width: 768px) {
-      padding: 0 10px;
       font-size: 0.8rem;
   }
 }
@@ -411,16 +407,13 @@
   gap: 10px;
   margin-top: 10px;
 
-  @media (max-width: 768px) {
-      padding: 0 10px;
-  }
 
   .product-price__only{
       font-size: 1.2rem;
       font-weight: bold;
       margin-right: 5px;
       @media (max-width: 768px) {
-          font-size: 1rem;
+          font-size: 0.8rem;
       }
   }
 
@@ -429,7 +422,7 @@
       font-weight: bold;
       color: #C5312D;
       @media (max-width: 768px) {
-          font-size: 1rem;
+          font-size: 0.8rem;
       }
   }
 
@@ -439,7 +432,7 @@
       color: black;
       text-decoration: line-through;
       @media (max-width: 768px) {
-          font-size: 0.8rem;
+          font-size: 0.5rem;
       }
   }
 
@@ -511,18 +504,36 @@
   font-weight: 800;
   color:black;
   text-align: center;
-  letter-spacing: 0.2px;
-  border: 1px solid transparent;
+  width: 30%;
+  letter-spacing: -2px;
+  margin:auto;
 
-  &:hover{
-    color: black;
-    background-color: white;
-    border: 1px solid black;
+  @media (max-width: 1600px) {
+    font-size: 2rem;
   }
 
-  &:active{
-    color: black;
-    border: 1px solid black;
-    background-color: white;
+  @media (max-width: 1200px) {
+    font-size: 1.7rem;
+    line-height: 1.7;
+    width: 75%;
   }
+
+  @media (max-width: 768px) {
+    font-size: 2.3rem;
+    padding-top: 30px;
+    width: 85%;
+  }
+
+  @media (max-width: 500px) {
+    font-size: 1.2rem;
+    padding-top: 0px;
+    width: 85%;
+  }
+}
+
+.main-shop__feature{
+  color: #ff7e00;
+  background-color: white;
+  padding: 5px 15px;
+  border-radius: 20px;
 }
