:sparkles: Update values

--- a/src/scss/checkout.scss
+++ b/src/scss/checkout.scss
@@ -126,7 +126,8 @@
             
             .discount-product-item{
               color: #C5312D;
-              font-size: 1.2rem;
+              font-size: 0.8rem;
+              font-weight: 800;
               font-style: italic;
             }
           }
