:lipstick: Update value modified

--- a/src/scss/checkout.scss
+++ b/src/scss/checkout.scss
@@ -139,6 +139,13 @@
           border-top: none;
           padding: 0 12px;
           width: 100%;
+
+          .discount-product-item{
+            color: #C5312D;
+            font-size: 0.8rem;
+            font-weight: 800;
+            font-style: italic;
+          }
         }
       }
     }
