--- a/src/scss/checkout.scss
+++ b/src/scss/checkout.scss
@@ -132,13 +132,19 @@
               font-weight: 800;
               font-style: italic;
             }
+
+            .pricing-product-item{
+              display: flex;
+              flex-direction: column;
+              gap:3px;
+            }
           }
         }
         th{
           width: 100%;
         }
         td {
-          
+
           .discount-product-item{
             color: #C5312D;
             font-size: 0.8rem;
