--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -358,6 +358,16 @@
   color:black;
 }
 
+.product-discount{
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: #C5312D;
+  font-weight: bold;
+  font-size: 0.8rem;
+  margin-bottom: 10px;
+}
+
 .product-image{
   padding: 15px;
   width: 100%; 
