Update styles and remove unnecessary files

--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -1121,6 +1121,7 @@ body.layout-2 {
     }
 
     .container {
+      background: transparent !important;
       position: static;
       width: 40%;
       max-width: 111.42857rem;
