--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -468,3 +468,40 @@
     }
 }
 
+
+.information-left{
+    margin: 0 auto;
+    width: 85%;
+    max-width: 111.42857rem;
+    padding: 50px 0;
+    padding-top: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+
+    .information-left__content{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+    }
+    .information-left__button{
+        width: 100%;
+        max-width: 500px;
+        padding: 10px;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        font-size: 1rem;
+        background-color: #000;
+        color: white;
+        font-weight: bold;
+        cursor: pointer;
+        width: 100%;
+        &:hover{
+            background-color: #333;           
+        }
+    }
+}
