--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -187,7 +187,7 @@
     flex-direction: column;
     gap:10px;
     width: 100%;
-    padding: 0 20px;
+    padding: 0;
     padding-top: 30px;
   }
 }
@@ -331,7 +331,7 @@
       height: 100%;
       border: 0.1px solid #d3d3d3!important;
       border-radius: 0px;
-      flex-grow: 1;
+      // flex-grow: 1;
     }
   
   @media (max-width:520px){
