Update winners banner styling

--- a/src/scss/ola.scss
+++ b/src/scss/ola.scss
@@ -14,8 +14,8 @@
 
 
 .winners-banner{
-    background-color: #b3e3f9;
-    padding: 0 5%;
+    background-color: #C1E2F7;
+    padding: 0 20%;
 }
 
 .winners-banner__title{
@@ -41,6 +41,5 @@
 }
 
 .winner-banner__prizes__item__img{
-    width: 25%;
     margin-bottom: 20px;
 }
