Update banner title and background color

--- a/src/scss/ola.scss
+++ b/src/scss/ola.scss
@@ -2,6 +2,7 @@
 
 .main-banner{
     position: relative;
+    background-color: #C1E2F7;
 }
 
 .main-banner__logo{
@@ -19,7 +20,7 @@
 }
 
 .winners-banner__title{
-    font-size: 2rem;
+    font-size: 2.3rem;
     margin-bottom: 50px;
 }
 
