:sparkles: Add products

--- a/src/scss/ola.scss
+++ b/src/scss/ola.scss
@@ -33,7 +33,7 @@
     display:flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 50px;
+    padding-bottom: 50px;
 }
 
 .winner-banner__prizes__item{
