--- a/src/scss/ola.scss
+++ b/src/scss/ola.scss
@@ -91,23 +91,20 @@
 
 .instructions__steps__item{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 10px;
+    gap: 20px;
     width: 100%;
+    background-color: #11161b;
+    border-radius: 10px;
+    padding: 30px 10px;
 }
 
 .instructions__steps__item__number{
-    font-size: 1.6rem;
+    font-size: 2rem;
     font-weight: 700;
     color:#269b9a;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background-color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .instructions__steps__item__text{
@@ -115,4 +112,5 @@
     font-weight: 400;
     color:white;
     width: 70%;
+    letter-spacing: -0.5px;
 }
