update page ola

--- a/src/scss/ola.scss
+++ b/src/scss/ola.scss
@@ -69,7 +69,7 @@
 
 .instructions{
     background-color: #1c2228;
-    padding: 50px 12.5%;
+    padding: 50px 25%;
 }
 
 .instructions__title{
@@ -113,4 +113,5 @@
     color:white;
     width: 70%;
     letter-spacing: -0.5px;
+    text-align: center;
 }
