style all the values

--- a/src/scss/ola.scss
+++ b/src/scss/ola.scss
@@ -118,6 +118,7 @@
 
 form > p {
     display: flex;
+    flex-direction: column;
     gap:20px;
     align-items: center;
     justify-content: center;
