--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -556,3 +556,20 @@
   padding: 5px 15px;
   border-radius: 20px;
 }
+
+.buy-button{
+  text-decoration: none;
+  font-size: 1.5rem;
+  padding: 10px 20px;
+  color: white;
+  background-color: black;
+  border-radius: 20px;
+  border: 0px;
+  font-weight: 700;
+  cursor: pointer;
+  &:hover{
+    background-color: white;
+    color: black;
+  }
+
+}
