:sparkles: Update show only product

--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -1236,9 +1236,9 @@ body.layout-2 {
         }
       }
 
-      table.variations {
-        display: none;
-      }
+      // table.variations {
+      //   display: none;
+      // }
 
       .tech-specs {
         width: 150%;
