--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -50,7 +50,7 @@
 .home-grid__video{
   
   >img{
-    transform: translateX(-150px);
+    transform: translateY(-150px);
     @media (max-width: 1280px) {
       transform: translateX(0px);
     }
