--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -26,26 +26,34 @@
 }
 
 
+// .home-info{
+//   position: absolute;
+//   top: 40%;
+//   padding-left: 10%;
+//   // left: 10%;
+
+//   @media (max-width:1280px){
+//     position: absolute;
+//     // width: 100%;
+//     // height: 100%;
+//     top: 65%;
+//     padding: 0 20%;
+//     // left: 0%;
+//     display: flex;
+//     justify-content: end;
+//     align-items: center;
+//     flex-direction: column;
+//     padding-bottom: 50px;
+//   }
+// }
+
 .home-info{
   position: absolute;
-  top: 40%;
-  padding-left: 10%;
-  // left: 10%;
-
-  @media (max-width:1280px){
-    position: absolute;
-    // width: 100%;
-    // height: 100%;
-    top: 65%;
-    padding: 0 20%;
-    // left: 0%;
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    flex-direction: column;
-    padding-bottom: 50px;
-  }
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
+
 
 .home-grid__video{
   
