--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -49,7 +49,7 @@
 
 .home-info{
   position: absolute;
-  top: 50%;
+  top: 70%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -160,25 +160,20 @@
 
 .home-title__button{
   display: block;
-  // @include btn(#000, #ededed, #ddd);
-  margin-top: 2rem;
   background-color: black;
   color: white;
-  border-bottom: 4px solid #eeeeee;
-  padding: 10px 20px;
+  border: 4px solid #eeeeee;
+  padding: 20px 30px;
   font-size: 1.8rem;
   font-weight: 700;
   text-decoration: none;
   text-align: center;
-  width: 60%;
-  // border-radius: 25px;
-  // width: 100%;
-  z-index: 997;
+  width: 100%;
+  z-index: 10;
   @media (max-width: 1280px) {
     margin-top: 1rem;
     font-size: 1.2rem;
-    width: 100%;
-
+    border: 2px solid #eeeeee;
   }
 }
 
