--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -49,9 +49,12 @@
 
 .home-info{
   position: absolute;
-  top: 70%;
+  top: 75%;
   left: 50%;
   transform: translate(-50%, -50%);
+  @media (max-width:1280px){
+    top: 100%;
+  }
 }
 
 
