--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -494,36 +494,29 @@
 }
 
 .main-shop__banner{ 
-  background: url(../assets/BANNER_WEB_COMPRAS.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 250px;
-  background-position: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  @media (max-width: 768px) {
-    height: 300px;
-    align-items: start;
-    width: 100%;
-    line-height: 1.6;
-  }
-
-  @media (max-width: 500px){
-    height: 150px;
-  }
+  position: relative;
 }
 
 
+.main-shop__img{
+  object-fit: cover;
+  width: 100%;
+  height: auto;
+}
+
 
 .main-shop__title{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+
   font-size: 2.4rem;
   font-weight: 800;
   color:black;
   text-align: center;
-  width: 30%;
+  width: 50%;
   letter-spacing: -2px;
   margin:auto;
 
