--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -501,7 +501,11 @@
 .main-shop__img{
   object-fit: cover;
   width: 100%;
-  height: auto;
+  height: auto!important;
+  @media (max-width: 768px) {
+    object-fit: none;
+    height: 180px!important;
+  }
 }
 
 
@@ -514,11 +518,13 @@
 
   font-size: 2.4rem;
   font-weight: 800;
-  color:black;
   text-align: center;
   width: 50%;
   letter-spacing: -2px;
-  margin:auto;
+
+  color: white;
+  background-color: black;
+  border-radius: 25px;
 
   @media (max-width: 1600px) {
     font-size: 2rem;
@@ -532,13 +538,11 @@
 
   @media (max-width: 768px) {
     font-size: 2.3rem;
-    padding-top: 30px;
     width: 85%;
   }
 
   @media (max-width: 500px) {
     font-size: 1.2rem;
-    padding-top: 0px;
     width: 85%;
   }
 }
