--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -525,7 +525,9 @@
   color: white;
   background-color: black;
   border-radius: 25px;
-
+  
+  padding: 15px 20px;
+  
   @media (max-width: 1600px) {
     font-size: 2rem;
   }
