:lipstick: Update values

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1103,3 +1103,12 @@
 
 
 }
+
+#timer{ 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  background-color: #C5312D;
+
+}
