--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -4,11 +4,12 @@
 
 
 .shop-notice {
-  width: 100%;
-  background: white;
+  width: 100%;  
+
   padding: .3rem .75rem .5rem;
   text-align: center;
   border-top: 1px solid #2c2c2d;
+  background-color: #fb221f;
 
   a {
     color: black;
@@ -65,12 +66,12 @@
 
 .home-grid__video{
   background-color: black;
-  >img{
-    transform: translateY(-150px);
-    @media (max-width: 1280px) {
-      transform: translateX(0px);
-    }
-  }
+  // >img{
+  //   transform: translateY(-150px);
+  //   @media (max-width: 1280px) {
+  //     transform: translateX(0px);
+  //   }
+  // }
 
 }
 
@@ -1110,5 +1111,4 @@
   align-items: center;
   gap: 10px;
   background-color: #C5312D;
-
 }
