--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1110,5 +1110,20 @@
   justify-content: center;
   align-items: center;
   gap: 10px;
-  background-color: #C5312D;
+  background-color: #fb221f;
+}
+
+.timer__item{
+  color:white;
+}
+
+.timer__item__number{
+  font-size: 2rem;
+  font-weight: 700;
+  letter-spacing: -0.5px;
+}
+.timer__item__text{
+  font-size: 1rem;
+  font-weight: 300;
+  letter-spacing: -0.5px;
 }
