:sparkles: Update countdown

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -4,8 +4,11 @@
 
 
 .shop-notice {
+  position: absolute;
+  top: 0%;
+  left: 50%;
+  transform: translate(-51%, -50%);
   width: 100%;  
-
   padding: .3rem .75rem .5rem;
   text-align: center;
   border-top: 1px solid #2c2c2d;
