--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -3,6 +3,10 @@
 @import "~slick-carousel/slick/slick";
 
 
+.main-container{
+  position: relative;
+}
+
 .shop-notice {
   position: absolute;
   top: 0%;
@@ -13,6 +17,7 @@
   text-align: center;
   border-top: 1px solid #2c2c2d;
   background-color: #fb221f;
+  z-index: 10;
 
   a {
     color: black;
