--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -511,25 +511,35 @@
   }
 }
 
-
-.main-shop__title{
+.main-shop__text{
   position: absolute;
   top: 50%;
   left: 50%;
+  width: 50%;
   transform: translate(-50%, -50%);
+  background-color: black;
+  border-radius: 25px;
+  color: white;
+  padding: 15px 20px;
+
+  @media (max-width: 1200px) {
+    width: 75%;
+  }
+  @media (max-width: 768px) {
+    width: 85%;
+  }
+  @media (max-width: 500px) {
+    width: 85%;
+  }
+}
 
 
+.main-shop__title{
   font-size: 2.4rem;
   font-weight: 800;
   text-align: center;
-  width: 50%;
   letter-spacing: -2px;
 
-  color: white;
-  background-color: black;
-  border-radius: 25px;
-  
-  padding: 15px 20px;
 
   @media (max-width: 1600px) {
     font-size: 2rem;
@@ -550,6 +560,35 @@
     font-size: 1.2rem;
     width: 85%;
   }
+}
+
+.main-shop__subtitle{
+  font-size: 1.2rem;
+  font-weight: 600;
+  text-align: center;
+  letter-spacing: -1px;
+  margin-bottom: 15px;
+
+  @media (max-width: 1600px) {
+    font-size: 1rem;
+  }
+
+  @media (max-width: 1200px) {
+    font-size: 0.9rem;
+    line-height: 1.7;
+    width: 75%;
+  }
+
+  @media (max-width: 768px) {
+    font-size: 1.2rem;
+    width: 85%;
+  }
+
+  @media (max-width: 500px) {
+    font-size: 0.8rem;
+    width: 85%;
+  }
+
 }
 
 .main-shop__feature{
