--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -67,8 +67,8 @@
 
 .home-info{
   position: absolute;
-  top: 24%;
-  left: 50%;
+  top: 8%;
+  left: 25%;
   transform: translate(-50%, -50%);
   @media (max-width:1280px){
     top: 10%;
@@ -125,6 +125,7 @@
   margin-bottom: 0.3rem;
   text-align: start;
   color: white;
+  letter-spacing: -2px;
   // display: none;
 
   @media (max-width: 1280px) {
@@ -183,13 +184,14 @@
   background-color: black;
   color: white;
   border: 4px solid #eeeeee;
-  padding: 20px 30px;
-  font-size: 1.8rem;
+  padding: 10px 30px;
+  font-size: 1.2rem;
   font-weight: 700;
   text-decoration: none;
   text-align: center;
-  width: 100%;
+  width: 40%;
   z-index: 10;
+  margin-top: 20px;
   @media (max-width: 1280px) {
     margin-top: 1rem;
     font-size: 1.2rem;
