--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -72,6 +72,7 @@
   transform: translate(-50%, -50%);
   @media (max-width:1280px){
     top: 10%;
+    left: 50%;
   }
 }
 
@@ -135,7 +136,6 @@
   @media (max-width: 640px) {
     font-size: 1.8rem;
     text-align: center;
-    display: none;
   }
 }
 
@@ -197,6 +197,7 @@
     font-size: 1.2rem;
     border: 2px solid #eeeeee;
     padding: 10px 20px;
+    width: 100%;
   }
 }
 
