Update background color in shop.scss and change product discount text in content-product.php

--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -365,7 +365,7 @@
   position: absolute;
   top: 3%;
   left: 60%;
-  background-color: #FF7900;
+  background-color: #000000;
   font-weight: 700;
   font-size: 0.8rem;
   margin-bottom: 10px;
