--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -68,7 +68,7 @@
 .home-info{
   position: absolute;
   top: 8%;
-  left: 40%;
+  left: 30%;
   transform: translate(-50%, -50%);
   @media (max-width:1280px){
     top: 10%;
@@ -79,7 +79,6 @@
 
 .home-grid__video{
   background-color: black;
-  opacity: 0.8;  
 
   >img{
     height: 90vh!important;
@@ -122,7 +121,7 @@
 
 .home-title{
   font-family: 'Helvetica Neue', sans-serif;
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: 600;
   margin-bottom: 0.3rem;
   text-align: start;
@@ -142,7 +141,7 @@
 
 .home-title--bold{
   font-weight: 700;
-  font-size: 2.3rem;
+  font-size: 2rem;
   letter-spacing: 4px;
 
   @media (max-width: 640px) {
@@ -182,15 +181,15 @@
 
 .home-title__button{
   display: block;
-  background-color: black;
+  background-color: transparent;
   color: white;
   border: 4px solid #eeeeee;
-  padding: 20px 30px;
-  font-size: 1.8rem;
+  padding: 10px 20px;
+  font-size: 1.3rem;
   font-weight: 700;
   text-decoration: none;
   text-align: center;
-  width: 50%;
+  width: 40%;
   z-index: 10;
   margin-top: 20px;
   @media (max-width: 1280px) {
