:sparkles: Update sizing in images

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -11,7 +11,7 @@
   // position: absolute;
   // top: 1%;
   // left: 50%;
-  transform: translate(-51%, -50%);
+  // transform: translate(-51%, -50%);
   padding: .3rem .75rem .5rem;
   text-align: center;
   border-top: 1px solid #2c2c2d;
