Add styles for form response output

--- a/src/scss/ola.scss
+++ b/src/scss/ola.scss
@@ -215,3 +215,11 @@ form > p {
         width: 100%;
     }
 }
+
+.wpcf7-response-output{
+    color: white;
+    font-size: 1.3rem;
+    font-weight: 600;
+    letter-spacing: -0.5px;
+    text-align: center;
+}
