--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -808,38 +808,38 @@
 }
 
 // Home Pop-up Image
-// .home-popup-image{
-//   z-index: 1000;
-//   background-color: black;
-//   color:white;
-//   position: fixed;
-//   top: 50%;
-//   left: 50%;
-//   transform: translate(-51%, -50%);
-//   width: 500px;
-//   height: auto;
-//   object-fit: cover;
-//   @media (max-width: 1280px) {
-//     width: 350px;
-//   }
-// }
-
 .home-popup-image{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   z-index: 1000;
   background-color: black;
   color:white;
-  padding: 20px;
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-51%, -50%);
+  width: 500px;
   height: auto;
   object-fit: cover;
-  width: 100%;
+  @media (max-width: 1280px) {
+    width: 350px;
+  }
 }
+
+// .home-popup-image{
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   z-index: 1000;
+//   background-color: black;
+//   color:white;
+//   padding: 20px;
+//   position: fixed;
+//   top: 50%;
+//   left: 50%;
+//   transform: translate(-50%, -50%);
+//   height: auto;
+//   object-fit: cover;
+//   width: 100%;
+// }
 
 
 .home-popup-image__close{
