--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -66,10 +66,11 @@
 // }
 
 .home-info{
-  position: absolute;
-  top: 8%;
-  left: 25%;
-  transform: translate(-50%, -50%);
+  width: 45%;
+  // position: absolute;
+  // top: 8%;
+  // left: 25%;
+  transform: translate(20%, -200%);
   @media (max-width:1280px){
     top: 10%;
     left: 50%;
