Update font-family in home.scss and webpack.config.js

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -128,7 +128,7 @@
 }
 
 .home-title{
-  font-family: 'Helvetica BLKEX';
+  font-family: $helveticaBlkEx;
   font-size: 3.5rem;
   font-weight: 600;
   margin-bottom: 0.3rem;
