Update font family names

--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,17 +1,17 @@
 @font-face {
-  font-family: 'Helvetica BLKEX';
+  font-family: HelveticaBLKEX;
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: local('Helvetica BLKEX'), url('../fonts/HelveticaNeueLTProBlkEx.otf') format('otf');
+  src: url('../fonts/HelveticaNeueLTProBlkEx.otf') format('otf');
 }
 
 @font-face {
-  font-family: 'Helvetica BL';
+  font-family: HelveticaBL;
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: local('Helvetica BL'), url('../fonts/HelveticaNeueLTProEx.otf') format('otf');
+  src: url('../fonts/HelveticaNeueLTProEx.otf') format('otf');
 }
 
 
