--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,17 +1,17 @@
 @font-face {
-  font-family: 'Helvetica BLKEX';
+  font-family: 'Helvetica Neue LT Bulk Pro';
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: local('Helvetica BLKEX'), url('http://dev.skullcandy.com.pe/wp-content/themes/skdy_web_peru/src/fonts/HelveticaNeueLTProBlkEx.otf') format('otf');
+  src: local('Helvetica Neue LT Bulk Pro'), url('../fonts/HelveticaNeueLTProBlkEx.otf') format('otf');
 }
 
 @font-face {
-  font-family: 'Helvetica BL';
+  font-family: 'Helvetica Neue LT Pro';
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: local('Helvetica BL'), url('../fonts/HelveticaNeueLTProEx.otf') format('otf');
+  src: local('Helvetica Neue LT Pro'), url('../fonts/HelveticaNeueLTProEx.otf') format('otf');
 }
 
 
